# AC-Project-AI-Model-Quantization-on-FPGA

./: .gitignore  README.md  demo.py  model.py
cpp_fixed/: fixed_point.h  fixed_point_test.cpp
hls/: dense_int8.cpp  hls_result.txt  requantizer.h  run_hls.tcl  tb_dense.cpp  test_image.h  weights.h
hls/proj_dense/: hls.app
hls/proj_dense/solution1/: solution1.aps  solution1.directive  solution1_data.json
hls/proj_dense/solution1/.autopilot/db/: a.g.0.bc  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.reflow.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  all.directive.json  apatb_dense_int8.cpp  apatb_dense_int8_ir.bc  apatb_dense_int8_ir.ll  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  be_messages.xml  burst.xml  cmplx.3.000.fe.link.json  cmplx.3.001.fe.unroll-raw.json  cmplx.3.002.fe.unroll-simplified.json  cmplx.3.003.fe.inline-raw.json  cmplx.3.004.fe.inline-simplified.json  cmplx.3.016.fe.opt.json  (+81 more)
hls/proj_dense/solution1/.debug/: dense_int8.protoinst
hls/proj_dense/solution1/impl/misc/drivers/dense_int8_v1_0/src/: CMakeLists.txt  Makefile  xdense_int8.c  xdense_int8_hw.h  xdense_int8_linux.c
hls/proj_dense/solution1/syn/: inferred_directives.ini  inferred_directives.tcl
hls/qnn_dense_hls/: hls.app
hls/qnn_dense_hls/sol1/: sol1.aps
models/: mnist_fp32.pt  mnist_ptq_int4.pt  mnist_ptq_int8.pt  mnist_qat_int4.pt  mnist_qat_int8.pt
python/: data.py  eval.py  export_quant.py  gen_test_image.py  ptq_quantize.py  qat_train.py  quant_utils.py  train_fp32.py
(+68 files in other folders)
